--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,17 +12,18 @@
   "type": "commonjs",
   "dependencies": {
     "@types/cors": "^2.8.19",
-    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.16.5",
     "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^24.1.0",
     "@types/nodemailer": "^6.4.17",
     "ts-node-dev": "^2.0.0",
