--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,14 +12,20 @@
   "type": "commonjs",
   "dependencies": {
     "@types/cors": "^2.8.19",
+    "@types/express-session": "^1.18.2",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.16.5",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
